--- a/src/tp2_lp/NovoServico.form
+++ b/src/tp2_lp/NovoServico.form
@@ -90,7 +90,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnVoltar">
           <Properties>
-            <Property name="text" type="java.lang.String" value="voltar"/>
+            <Property name="text" type="java.lang.String" value="Voltar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVoltarActionPerformed"/>
@@ -98,7 +98,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="bntEnviar">
           <Properties>
-            <Property name="text" type="java.lang.String" value="enviar"/>
+            <Property name="text" type="java.lang.String" value="Enviar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntEnviarActionPerformed"/>
